fixed readme links, made icons in footer links, added links to redirect to project div when category is picked

--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -9,6 +9,9 @@
   text-align: center;
   cursor: pointer;
 }
+.section-nav a{
+  text-decoration: none;
+}
 .section-nav p {
   font-family: "Didact Gothic", sans-serif;
   padding: 0 2rem;
